- add basic auth for some endpoints - implemented dynamical base url for swagger
