# docs/swagger.json
@@ -239,6 +239,11 @@
         },
         "/advertisements": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns a list of active ads filtered by placement.",
                 "consumes": [
                     "application/json"
@@ -1371,6 +1376,11 @@
         },
         "/master/genders": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Returns a list of all active gender options for user profiling.",
                 "produces": [
                     "application/json"
@@ -1412,6 +1422,11 @@
         },
         "/master/interests": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Returns a list of all active interests/hobbies options.",
                 "produces": [
                     "application/json"
@@ -1453,6 +1468,11 @@
         },
         "/master/languages": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Returns a list of all active spoken languages options.",
                 "produces": [
                     "application/json"
@@ -1494,6 +1514,11 @@
         },
         "/master/relationship-types": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Returns a list of all active relationship types (e.g., Short-term, Long-term) for user profiling.",
                 "produces": [
                     "application/json"
@@ -1535,6 +1560,11 @@
         },
         "/monetization/consumables": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Get a list of all buyable consumable packets (boosts, crushes)",
                 "produces": [
                     "application/json"
@@ -1555,6 +1585,11 @@
         },
         "/monetization/plans": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Get a list of all available subscription plans with prices and features",
                 "produces": [
                     "application/json"
@@ -1575,6 +1610,11 @@
         },
         "/monetization/purchase/consumable": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -1608,6 +1648,11 @@
         },
         "/monetization/purchase/plan": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
