# router/api/v1/master_routes.go
@@ -4,6 +4,7 @@ import "github.com/gin-gonic/gin"
 
 func registerMasterRoutes(v1 *gin.RouterGroup, h *Handlers, cfg RouterConfig) {
 	masterGroup := v1.Group("/master")
+	masterGroup.Use(cfg.BasicAuthMiddleware)
 	{
 		masterGroup.GET("/genders", h.Master.GetGenders)
 		masterGroup.GET("/relationship-types", h.Master.GetRelationshipTypes)
@@ -11,5 +12,6 @@ func registerMasterRoutes(v1 *gin.RouterGroup, h *Handlers, cfg RouterConfig) {
 		masterGroup.GET("/languages", h.Master.GetLanguages)
 	}
 
-	v1.GET("/advertisements", h.Master.GetAdvertisements)
+	// Advertisements now require token login (JWT)
+	v1.GET("/advertisements", cfg.AuthMiddleware, h.Master.GetAdvertisements)
 }
